Linking Collections links additional objects #93402

Closed
opened 2021-11-26 12:09:37 +01:00 by Steffen Dünner · 8 comments

System Information
Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-26 10:08, hash: dcc500e5a2
Worked: master from a few days ago

Caused by d7cf7d4048.

Short description of error
Linking a Collection (in this super simple case a blend file containing two cubes that are parented to two bones on an Armature) not only links the Collection Instance but also the Collection containing the two cubes.
The file contains that is linked contains this:
Screenshot from 2021-11-26 11-59-23.png

LIB_Cubes_v01.blend

Exact steps for others to reproduce the error

  • Download the attached blend file
  • Open Blender with an empty scene and link the Collection "Geometry" from this file into it.
  • It should look like this:
    Screenshot from 2021-11-26 12-03-55.png
  • But in current master it looks like this:
    Screenshot from 2021-11-26 12-05-05.png

As you can see the "Cubes" Collection is linked additionally and has to be unlinked before "Make Library Override" to not clutter your scene with stuff you don't need.

This behaviour is rather new so the only commit I think could've caused it would be this e253fb2143

**System Information** Operating system: Linux-5.11.0-40-generic-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 2070 Super/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.29.05 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-11-26 10:08, hash: `dcc500e5a2` Worked: master from a few days ago Caused by d7cf7d4048. **Short description of error** Linking a Collection (in this super simple case a blend file containing two cubes that are parented to two bones on an Armature) not only links the Collection Instance but also the Collection containing the two cubes. The file contains that is linked contains this: ![Screenshot from 2021-11-26 11-59-23.png](https://archive.blender.org/developer/F12271537/Screenshot_from_2021-11-26_11-59-23.png) [LIB_Cubes_v01.blend](https://archive.blender.org/developer/F12271552/LIB_Cubes_v01.blend) **Exact steps for others to reproduce the error** - Download the attached blend file - Open Blender with an empty scene and link the Collection "Geometry" from this file into it. - It should look like this: ![Screenshot from 2021-11-26 12-03-55.png](https://archive.blender.org/developer/F12271602/Screenshot_from_2021-11-26_12-03-55.png) - But in current master it looks like this: ![Screenshot from 2021-11-26 12-05-05.png](https://archive.blender.org/developer/F12271618/Screenshot_from_2021-11-26_12-05-05.png) As you can see the "Cubes" Collection is linked additionally and has to be unlinked before "Make Library Override" to not clutter your scene with stuff you don't need. This behaviour is rather new so the only commit I think could've caused it would be this e253fb2143

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Caused by d7cf7d4048.

CC @mont29: this was supposed to not change behavior, mind checking?

NOTE: This should be a non-behavioral change commit.

Caused by d7cf7d4048. CC @mont29: this was supposed to not change behavior, mind checking? > NOTE: This should be a non-behavioral change commit.

This issue was referenced by 2efc2221cc

This issue was referenced by 2efc2221cc0d8b48fd8ff40dca5c33f70016d023

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-11-26 17:49:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93402
No description provided.