Fix T93402: Linking Collections instantiate extra sub-collections.

Linking is more relax than appending when it comes to instantiating
indirectly linked collections/objects.